improved controller logic and implemented swagger
